Changed h2 color to white. root background color to black

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
+:root {
+	background-color: black
+}
 
 body {
-	background-color: black;
 	text-align: center;
 }
 
@@ -38,8 +40,9 @@ a:hover {
 	background-color: lightyellow;
 }
 
-
-
+h2 {
+	color: white
+}
 
 
 
